--- a/realsense_ros2/package.xml
+++ b/realsense_ros2/package.xml
@@ -14,6 +14,7 @@
 
 
   <depend>rclcpp</depend>
+  <depend>rclpy</depend>
   <depend>geometry_msgs</depend>
   <depend>nav_msgs</depend>
   <depend>sensor_msgs</depend>
